--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -588,6 +588,7 @@ footer {
     .hero .hero-content h2 {
         display: block;
         font-size: 2rem;
+        text-align: center;
     }
 
     .hero-content .hero p {
@@ -636,6 +637,14 @@ footer {
 
     .partner h1 {
         font-size: 2rem;
+    }
+
+    .container-address {
+        flex-direction: column;
+    }
+
+    .maps {
+        margin-left: 20px;
     }
 
     .about-page {
@@ -690,7 +699,7 @@ footer {
     }
 
     .navbar .logo img {
-        max-width: 60px;
+        max-height: 20px;
     }
 
     .nav-toggle {
@@ -745,6 +754,33 @@ footer {
 
     .btn-about {
         margin: 0 auto;
+    }
+
+    .container-address {
+        justify-content: center;
+    }
+
+    .main-address {
+        margin: 0;
+        width: 100%;
+        align-items: center;
+        text-align: center;
+    }
+
+    .main-address p:nth-child(3) {
+        margin: 5px;
+    }
+
+    .main-address p:nth-child(4) {
+        margin: 5px;
+    }
+
+    .main-address p:nth-child(5) {
+        margin: 5px;
+    }
+
+    .maps iframe {
+        max-width: 370px;
     }
 
     .about-page>.container-about h2 {
