--- a/test/css/styles.css
+++ b/test/css/styles.css
@@ -491,10 +491,15 @@ nav.black>ul>li>a {
 
 .main-address {
     margin-left: 20px;
-    width: 50%;
+    margin-right: 240px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.main-address img {
+    margin-bottom: 20px;
 }
 
 .maps iframe {
@@ -641,10 +646,24 @@ footer {
 
     .container-address {
         flex-direction: column;
+        width: 100%;
+        align-items: center;
     }
 
-    .maps {
-        margin-left: 20px;
+    .main-address {
+        margin: 0;
+        margin-bottom: 20px;
+        align-items: center;
+        text-align: center;
+        width: 50%;
+    }
+
+    .main-address img {
+        margin-bottom: 20px;
+    }
+
+    .main-address p {
+        margin: 5px;
     }
 
     .about-page {
@@ -765,6 +784,7 @@ footer {
         width: 100%;
         align-items: center;
         text-align: center;
+        margin-bottom: 20px;
     }
 
     .main-address p:nth-child(3) {
